# fda-biologics-experiment

./: .gitignore  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: qc.yaml  release.yaml
cache/enums/: diseaseterm_cb9fbc86f8a3.csv  drugterm_e66cef5c50a5.csv
cache/fda_labels/: 00c424b5-6ccd-48ab-9e88-1986451120e2.txt  053b9158-2a5b-48b9-bf47-5fa78a35ec33.txt  0836c6ac-ee37-5640-2fed-a3185a0b16eb.txt  08ef1e3e-496f-4b0b-94ee-fbba3cc1985a.txt  095eab9f-545a-4f12-bfb7-19477fb901a5.txt  0a25363a-7781-d9f8-cb1c-be22987bf03b.txt  102f96a0-6e3a-4fc1-b204-34d604683af6.txt  109648d0-d30a-42fc-8273-39cb1540a751.txt  15f99d8c-efe7-4f7d-aa20-0d0f1e30c6e8.txt  17f85d17-ab71-4f5b-9fe3-0b8c822f69ff.txt  1a550c33-456a-4833-814e-8591aea7c688.txt  1af01887-b69d-444b-91ed-ebfe12784440.txt  1e6dc9ae-1c4c-42d9-87aa-c315ecc51b56.txt  (+109 more)
data/: node_details.json
references_cache/: PMID_11248153.md  PMID_11496232.md  PMID_11807147.md  PMID_11920396.md  PMID_15175435.md  PMID_16467544.md  PMID_16990386.md  PMID_17634458.md  PMID_18486739.md  PMID_19671655.md  PMID_20879881.md  PMID_20921465.md  PMID_22149875.md  PMID_23084240.md  PMID_23964932.md  PMID_24094768.md  PMID_24401022.md  PMID_25282520.md  PMID_25733246.md  PMID_25736990.md  PMID_25891173.md  PMID_26035255.md  PMID_26045340.md  PMID_26422722.md  PMID_26816011.md  PMID_27291997.md  PMID_27292104.md  PMID_27299809.md  PMID_27609406.md  PMID_27641143.md  PMID_27705267.md  PMID_27959701.md  PMID_28002679.md  PMID_28057360.md  PMID_28121498.md  PMID_28249141.md  PMID_28596043.md  PMID_29171818.md  PMID_29171821.md  PMID_29224502.md  (+78 more)
scripts/: fetch_node_details.py  write_metadata.py
(+141 files in other folders)
